<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Basic_axis_typ" Id="{fe209603-205e-0d1c-17d4-f8d0b46b05ba}">
    <Declaration><![CDATA[TYPE Basic_axis_typ : 	
	STRUCT 
		Input : Basic_Input_typ; (*command structure*)
		Output : Basic_Output_typ; (*parameter structure*)
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>