<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Basic_Error_axis_typ" Id="{6d856745-e1ec-03aa-3712-7bb93fa5911c}">
    <Declaration><![CDATA[TYPE Basic_Error_axis_typ : 	
	STRUCT 
		ErrorCount	: UINT ;
		fbErrorHandler : FB_ErrorHandler;	
	//	ErrorInfo : ERR_TASK_INFO_typ;
		ErrorEntry: Eh_ErrorEntry_typ;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>