<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ParIDAccess_CMD_typ" Id="{feafedd6-0fea-0861-095b-3addf41ffbdc}">
    <Declaration><![CDATA[TYPE ParIDAccess_CMD_typ :
STRUCT
		
	WriteCoeSdo : BOOL;
	ReadCoeSdo : BOOL;	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>