<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ParIDAccess_Typ" Id="{ac13c53d-b400-0ee4-2514-91eacb7b768b}">
    <Declaration><![CDATA[TYPE ParIDAccess_Typ :
STRUCT
	Input	: ParIDAccess_Input_typ ;
	Output	: ParIDAccess_Output_typ ;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>