<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="eParIDAccessState" Id="{3d63862b-5def-0e17-177d-631440498d8c}">
    <Declaration><![CDATA[TYPE eParIDAccessState :
	(
		ParID_STATE_WAIT := 0,
		ParID_STATE_READY,
		ParID_STATE_READ_SDO,
		ParID_STATE_WRITE_SDO,		
		ParID_STATE_ERROR
	);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>