<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="EcCoeSdoWrite_Param_typ" Id="{169a065c-1d13-0086-0b13-ce91d03a4ac2}">
    <Declaration><![CDATA[TYPE EcCoeSdoWrite_Param_typ :
	STRUCT
		sNetId          : T_AmsNetId; 
        nSlaveAddr      : UINT; 
        nSubIndex       : BYTE; 
        nIndex          : WORD;
        pSrcBuf         : POINTER TO DWORD; 
        cbBufLen        : UDINT; 
        //bExecute        : BOOL;
        tTimeout        : TIME := DEFAULT_ADS_TIMEOUT ;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>