<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Tc2_EtherCAT_Statuses_typ" Id="{767e5743-2cb3-0e1a-22dc-0f5cecb515e1}">
    <Declaration><![CDATA[TYPE Tc2_EtherCAT_Statuses_typ :
	STRUCT
		EcCoeSdoWrite 	: EcCoeSdoWrite_Status_typ ;
		EcCoeSdoRead 	: EcCoeSdoRead_Status_typ ;
		EcSoeRead		: EcSoeRead_Status_typ ;
		EcSoeWrite		: EcSoeWrite_Status_typ ;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>